add: slug recursive function

--- a/templates/playlist/tvshow_seasons_detail.html
+++ b/templates/playlist/tvshow_seasons_detail.html
@@ -12,10 +12,12 @@
 
 {% block content %}
 
-
-
-{% if title %} <h1>{{title}}</h1> {% endif %}
 <h1> {{object.title}} </h1>
+{% for season in object.seasons %}
+
+    <li>{{season.title}}</li>
+
+{% endfor %}
 
 
 {% endblock content %}
